notepad: Better modularize templates, fix spacing under warning message.

--- a/notepad/static/notepad/css/notepad.css
+++ b/notepad/static/notepad/css/notepad.css
@@ -45,8 +45,8 @@ pre.content {
   width: calc(100% - 25px);
 }
 
-#confirm {
-  margin-bottom: 40px;
+#notice {
+  margin-bottom: 50px;
 }
 
 #notes_container {
